WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255436
Fix unused param warning in NetworkStorageManager
https://bugs.webkit.org/show_bug.cgi?id=255436
Summary
Fix unused param warning in NetworkStorageManager
Yousuke Kimoto
Reported
2023-04-13 21:57:24 PDT
An unused param error was detected:
>11:11:26 In file included from D:\jenkins_slave\workspace\Neko.trunk.PPR.Release\WebKitBuild\Release\WebKit\DerivedSources\unified-sources\UnifiedSource-72468c22->11.cpp:8: >11:11:26 D:\jenkins_slave\workspace\Neko.trunk.PPR.Release\Source\WebKit\NetworkProcess/storage/NetworkStorageManager.cpp(485,14): error : variable 'deletedOriginCount' set but not used [-Werror,-Wunused-but-set-variable]
Attachments
Add attachment
proposed patch, testcase, etc.
Yousuke Kimoto
Comment 1
2023-04-13 22:41:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12731
EWS
Comment 2
2023-04-13 23:39:34 PDT
Committed
262946@main
(1a1b5cfdbcfa): <
https://commits.webkit.org/262946@main
> Reviewed commits have been landed. Closing PR #12731 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-13 23:40:16 PDT
<
rdar://problem/108035019
>
Yousuke Kimoto
Comment 4
2023-05-14 20:26:42 PDT
> 10:52:11 Source\WebKit\NetworkProcess/storage/NetworkStorageManager.cpp(497,14): error : variable 'deletedOriginCount' set but not used [-Werror,-Wunused-but-set-variable]
Au used param error was detected again due to a change which deleted the previous fix.
Yousuke Kimoto
Comment 5
2023-05-14 20:51:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13867
EWS
Comment 6
2023-05-15 08:00:22 PDT
Committed
264071@main
(aba257c0991d): <
https://commits.webkit.org/264071@main
> Reviewed commits have been landed. Closing PR #13867 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug