Fix unused param warning in NetworkStorageManager https://bugs.webkit.org/show_bug.cgi?id=255436

Reviewed by Chris Dumez.

If RELEASE_LOG() is desiabled, `deletedOriginCount` is not used in
NetworkStorageManager::performEviction() because 'deletedOriginCount`
is only used for a debug print purpose. Though `deletedOriginCount` is
incremented, compilers' optimization omits the variable.

* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp: Add UNUSED_PARAM for `deletedOriginCount` next to the RELEASE_LOG.
(WebKit::NetworkStorageManager::performEviction):

Canonical link: https://commits.webkit.org/262946@main